// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatTerminal > clean report shows all-clear message 1`] = `
"
Health Score: 100 / 100

All checks passed. Your dependencies look healthy.
"
`;

exports[`formatTerminal > full report with data in every section matches snapshot 1`] = `
"
Health Score: 42 / 100

Outdated Packages
┌─────────┬─────────┬────────┬───────┬───────────┐
│ Package │ Current │ Latest │ Bump  │ Abandoned │
├─────────┼─────────┼────────┼───────┼───────────┤
│ lodash  │ 4.0.0   │ 5.0.0  │ MAJOR │ no        │
├─────────┼─────────┼────────┼───────┼───────────┤
│ express │ 4.18.0  │ 4.19.0 │ MINOR │ no        │
├─────────┼─────────┼────────┼───────┼───────────┤
│ chalk   │ 5.3.0   │ 5.3.1  │ PATCH │ no        │
├─────────┼─────────┼────────┼───────┼───────────┤
│ old-lib │ 1.0.0   │ 2.0.0  │ MAJOR │ yes       │
└─────────┴─────────┴────────┴───────┴───────────┘

Unused Dependencies
  unused-package
  another-unused

Missing from package.json
  missing-dep

Bundle Size — Heavy Packages
  Total gzip across analyzed packages: 71.5 kB
┌─────────┬─────────┬──────────┬─────────────┐
│ Package │ Gzip    │ Size     │ Alternative │
├─────────┼─────────┼──────────┼─────────────┤
│ moment  │ 70.3 kB │ 283.2 kB │ date-fns    │
└─────────┴─────────┴──────────┴─────────────┘

License Report
  Total packages analyzed: 2
  Conflicts detected:
┌──────────────────┬─────────┬─────────┐
│ Package          │ Version │ License │
├──────────────────┼─────────┼─────────┤
│ some-gpl-package │ 1.0.0   │ GPL-3.0 │
└──────────────────┴─────────┴─────────┘

Analyzer Errors
  [bundleSize] bundlephobia API timed out
  [licenses] Could not read node_modules
"
`;

exports[`formatTerminal > report with errors shows analyzer errors section 1`] = `
"
Health Score: 100 / 100

Analyzer Errors
  [outdated] registry is down
"
`;

exports[`formatTerminal > report with heavy bundle packages shows bundle section 1`] = `
"
Health Score: 70 / 100

Bundle Size — Heavy Packages
  Total gzip across analyzed packages: 70.3 kB
┌─────────┬─────────┬──────────┬─────────────┐
│ Package │ Gzip    │ Size     │ Alternative │
├─────────┼─────────┼──────────┼─────────────┤
│ moment  │ 70.3 kB │ 283.2 kB │ date-fns    │
└─────────┴─────────┴──────────┴─────────────┘
"
`;

exports[`formatTerminal > report with license conflicts shows conflicts table 1`] = `
"
Health Score: 60 / 100

License Report
  Total packages analyzed: 1
  Conflicts detected:
┌──────────────────┬─────────┬─────────┐
│ Package          │ Version │ License │
├──────────────────┼─────────┼─────────┤
│ some-gpl-package │ 1.0.0   │ GPL-3.0 │
└──────────────────┴─────────┴─────────┘
"
`;

exports[`formatTerminal > report with licenses but no conflicts shows no-conflict message 1`] = `
"
Health Score: 100 / 100

License Report
  Total packages analyzed: 1
  No license conflicts found.

All checks passed. Your dependencies look healthy.
"
`;

exports[`formatTerminal > report with missing-from-package.json entries shows that section 1`] = `
"
Health Score: 90 / 100

Missing from package.json
  implicit-dep
"
`;

exports[`formatTerminal > report with only outdated packages shows only that section 1`] = `
"
Health Score: 75 / 100

Outdated Packages
┌─────────┬─────────┬────────┬───────┬───────────┐
│ Package │ Current │ Latest │ Bump  │ Abandoned │
├─────────┼─────────┼────────┼───────┼───────────┤
│ lodash  │ 4.0.0   │ 5.0.0  │ MAJOR │ no        │
└─────────┴─────────┴────────┴───────┴───────────┘
"
`;

exports[`formatTerminal > report with only unused deps shows only that section 1`] = `
"
Health Score: 80 / 100

Unused Dependencies
  dead-dep
"
`;
